<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">movle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="appname">Appname</string>

</resources>
